--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,13 +7,17 @@ on:
 
 jobs:
 
-  continuous_integration:
-    name: CI
-    uses: ./.github/workflows/continuous_integration.yml
+  node_ci:
+    name: Node CI
+    uses: ./.github/workflows/node_ci.yml
+
+  docker_ci:
+    name: Docker CI
+    uses: ./.github/workflows/docker_ci.yml
 
   continuous_delivery:
     name: CD
-    needs: [continuous_integration]
+    needs: [node_ci, docker_ci]
     environment:
       name: production
     uses: ./.github/workflows/deploy.yml
