--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -13,7 +13,8 @@ jobs:
     strategy:
     fail-fast: false
     matrix:
-      language: - javascript
+      language:
+        - javascript
 
     steps:
       - name: Checkout repository
