--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -11,10 +11,10 @@ jobs:
     name: CodeQL
     runs-on: ubuntu-latest
     strategy:
-    fail-fast: false
-    matrix:
-      language:
-        - javascript
+      fail-fast: false
+      matrix:
+        language:
+          - javascript
 
     steps:
       - name: Checkout repository
@@ -49,7 +49,8 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - uses: actions/cache@v3
+      - name: "⚡ Cache dependencies"
+        uses: actions/cache@v3
         id: modules-cache
         with:
           path: '**/node_modules'
