--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -176,7 +176,8 @@ jobs:
         uses: codecov/codecov-action@v2
         with:
           # token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          flags: unittests
           files: ./coverage-final-client.json,./coverage-final-server.json
           name: codecov-umbrella # optional
           fail_ci_if_error: true # optional (default = false)
-          verbose: true # optional (default = false)
+          # verbose: true # optional (default = false)
