--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -151,7 +151,7 @@ jobs:
           cp .env ./server/.env
 
       - name: "⚡ Cache/Build Docker Client layers"
-        id: docker-cache
+        id: docker-cache-client
         uses: actions/cache@v2
         with:
           path: /tmp/docker-registry-client
@@ -163,14 +163,15 @@ jobs:
         run: docker run -d -p 5000:5000 --restart=always --name registry -v /tmp/docker-registry:/var/lib/registry registry:2 && npx wait-on tcp:5000
 
       - name: "🏗 Build Docker Client image"
+        if: steps.docker-cache-client.outputs.cache-hit != 'true'
         working-directory: ./client
         run: docker build . -t client --cache-from=localhost:5000/client --build-arg BUILDKIT_INLINE_CACHE=1
 
       - name: "🏷️ Tag Docker Client image"
-        run: docker tag client localhost:5000/client && docker push localhost:5000/client|| true
+        run: docker tag client localhost:5000/client
 
       - name: "📦 Cache/Build Docker Server layers"
-        id: docker-cache-b
+        id: docker-cache-server
         uses: actions/cache@v2
         with:
           path: /tmp/docker-registry-server
@@ -179,6 +180,7 @@ jobs:
             docker-registry-no-buildkit-server-${{ github.sha }}
 
       - name: "🏗 Build Docker Server image"
+        if: steps.docker-cache-server.outputs.cache-hit != 'true'
         working-directory: ./server
         run: docker build . -t server --cache-from=localhost:5000/server --build-arg BUILDKIT_INLINE_CACHE=1
 
