--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -185,7 +185,7 @@ jobs:
         run: docker build . -t server --cache-from=localhost:5000/server --build-arg BUILDKIT_INLINE_CACHE=1
 
       - name: "🏷️ Tag Docker Server image"
-        run: docker tag server:5000/server && docker push localhost:5000/server || true
+        run: docker tag localhost:5000/server && docker push localhost:5000/server || true
 
       - name: "🚀 Run Server Docker Container"
         run: docker run --env-file ./.env -d -p 5000:5000 localhost:5000/server:latest
