--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -19,6 +19,7 @@ jobs:
   coverage_upload:
     needs: [node_ci]
     environment: CI
+    runs-on: ubuntu-latest
     name: CodeCov upload
 
     steps:
